--- a/app/src/main/res/layout/pagina_articulos_adm.xml
+++ b/app/src/main/res/layout/pagina_articulos_adm.xml
@@ -7,69 +7,98 @@
     tools:context="com.example.alu2015059.jstyle.AnadirArticulo">
 
     <EditText
-        android:id="@+id/et_buscador"
+        android:id="@+id/pga_et_buscador"
         android:layout_width="274dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:ems="10"
         android:hint="Codigo"
         android:inputType="textPersonName"
-        app:layout_constraintBottom_toBottomOf="@+id/btn_buscador"
+        app:layout_constraintBottom_toBottomOf="@+id/pga_btn_buscador"
+        app:layout_constraintEnd_toStartOf="@+id/pga_btn_buscador"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/btn_buscador"
+        android:id="@+id/pga_btn_buscador"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="59dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:text="Buscar"
-        app:layout_constraintBottom_toTopOf="@+id/btn_volver"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/et_buscador"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/btn_anadir"
-        android:layout_width="175dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:text="Añadir articulo"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/et_buscador" />
-
-    <ListView
-        android:id="@+id/lista_articulos"
-        android:layout_width="match_parent"
-        android:layout_height="292dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:scrollbars="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="Buscar"
+        app:layout_constraintBottom_toTopOf="@+id/pga_btn_comprar"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_volver" />
+        app:layout_constraintStart_toEndOf="@+id/pga_et_buscador"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/btn_volver"
-        android:layout_width="wrap_content"
+        android:id="@+id/pga_btn_volver"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="Volver a menu principal"
+        android:text="Volver"
+        app:layout_constraintBottom_toBottomOf="@+id/pga_btn_anadir"
+        app:layout_constraintEnd_toStartOf="@+id/pga_btn_anadir"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/pga_et_buscador"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/srl_articulos"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_anadir" />
+        app:layout_constraintTop_toBottomOf="@+id/pga_btn_anadir">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_articulos"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </android.support.v4.widget.SwipeRefreshLayout>
+
+    <Button
+        android:id="@+id/pga_btn_anadir"
+        android:layout_width="160dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="Añadir Articulos"
+        app:layout_constraintBottom_toBottomOf="@+id/pga_btn_comprar"
+        app:layout_constraintEnd_toStartOf="@+id/pga_btn_comprar"
+        app:layout_constraintStart_toEndOf="@+id/pga_btn_volver"
+        app:layout_constraintTop_toBottomOf="@+id/pga_et_buscador"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <Button
+        android:id="@+id/pga_btn_comprar"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="Compar"
+        app:layout_constraintBottom_toTopOf="@+id/srl_articulos"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/pga_btn_anadir"
+        app:layout_constraintTop_toBottomOf="@+id/pga_et_buscador" />
 
 </android.support.constraint.ConstraintLayout>
